Fixed overlapping footer, #1216 (#1224)

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -330,6 +330,7 @@ a {
   width: 100%;
   margin-top: -24px;
   margin-left: 100px;
+  margin-bottom: 100px;
 }
 
 .pagination>li>span.active_page,.pagination>li>span>div.page-text.active_page{
